--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
+    "react-resizable-panels": "^4.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
