--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.3.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
@@ -46,6 +49,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.6.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
