feat: 添加工作区管理和模型搜索功能
- 新增 workspace store 管理项目工作区状态
- 添加目录选择器和文件系统命令 (tauri-plugin-dialog)
- 重构 ModelSelector 支持搜索过滤 (cmdk)
- 新增 ChatProvider 集中管理聊天状态
- 添加 Popover 和 Command UI 组件
- 侧边栏新增打开项目按钮
- 引入 zustand 作为状态管理库

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,4 +31,5 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 parking_lot = "0.12.5"
 zip = "7.0.0"
+tauri-plugin-dialog = "2.4.2"
 
