feat: 添加会话搜索、思考指示器和推理深度选择器，优化配置隔离与状态刷新
后端优化:
- 使用 XDG 环境变量实现 opencode 完全配置隔离
- 简化路径管理模块，修复 Clippy 警告 (PathBuf → Path)
- 使用 #[default] 属性重构 Default trait 实现

MCP 与 Provider 改进:
- MCP: 改用 config.update API 持久化配置
- MCP: 添加服务重启刷新功能
- Provider: OAuth 和 API Key 保存后调用 instance.dispose 刷新缓存

聊天功能增强:
- 添加 SessionSearchDialog 会话历史搜索组件
- 添加 ThinkingIndicator 思考状态指示器
- 添加 VariantSelector 推理深度选择器
- 国际化: 添加新组件的中英文翻译

--- a/src-tauri/config.json
+++ b/src-tauri/config.json
@@ -1,4 +1,15 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "model": "github-copilot/claude-opus-4.5"
+  "model": "github-copilot/claude-opus-4.5",
+  "mcp": {
+    "pdf-reader": {
+      "type": "local",
+      "command": [
+        "bunx",
+        "@sylphx/pdf-reader-mcp"
+      ],
+      "enabled": true,
+      "timeout": 5000
+    }
+  }
 }
