--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,4 +32,5 @@ tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 parking_lot = "0.12.5"
 zip = "7.0.0"
 tauri-plugin-dialog = "2.4.2"
+similar = { version = "2.7.0", features = ["unicode"] }
 
