feat: 首屏启动优化 + 新增 StatusBar 状态栏组件
- 优化首屏加载体验：改进 loading 动画，支持淡出效果
- Rust Release 构建优化：启用 LTO、单代码生成单元等配置
- WebView 启动加速：添加 WebView2 优化参数，动态创建窗口
- ChatContainer 滚动优化：修复自动滚动逻辑，避免消息更新时强制滚动
- ChatInputCard 聚焦修复：组件挂载时自动聚焦输入框
- TodoList 优化：所有任务完成后自动隐藏列表
- ToolPart 收起功能：已完成的工具调用可以收起详情
- 新增 StatusBar 组件：底部状态栏显示 MCP 服务器状态
- 新增 AppLoader 组件：服务初始化期间显示加载状态
- 添加 LICENSE 文件

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,3 +34,16 @@ zip = "7.0.0"
 tauri-plugin-dialog = "2.4.2"
 similar = { version = "2.7.0", features = ["unicode"] }
 
+# Release 构建优化 - 减小体积并提升启动速度
+[profile.release]
+# 启用链接时优化
+lto = true
+# 单代码生成单元，优化更彻底
+codegen-units = 1
+# 优化大小同时保持性能
+opt-level = "s"
+# 移除 panic 展开信息
+panic = "abort"
+# 剥离调试符号
+strip = true
+
