--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ zip = "7.0.0"
 tauri-plugin-dialog = "2.4.2"
 similar = { version = "2.7.0", features = ["unicode"] }
 semver = "1.0.27"
+base64 = "0.22.1"
 
 # Dev 构建优化 - 加快编译速度
 [profile.dev]
