ignore: 添加版本缓存机制避免 GitHub API 限流
用户无需频繁等待版本检查，缓存 12 小时后自动刷新

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ similar = { version = "2.7.0", features = ["unicode"] }
 semver = "1.0.27"
 base64 = "0.22.1"
 tauri-plugin-window-state = "2.4.1"
+chrono = { version = "0.4.42", features = ["serde"] }
 
 # Dev 构建优化 - 加快编译速度
 [profile.dev]
