feat: 添加集成终端功能
- 新增前端终端组件 (TerminalPanel, TerminalTabs, TerminalToolbar)
- 新增 Rust 后端终端管理 (portable-pty 支持)
- 在 RootLayout 中添加可调整大小的终端面板
- StatusBar 添加终端切换按钮
- 终端面板高度持久化到布局配置
- 修复 OpencodeProvider 初始化状态同步问题
- 修复 OpenCode 服务状态检测逻辑

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,8 @@ semver = "1.0.27"
 base64 = "0.22.1"
 tauri-plugin-window-state = "2.4.1"
 chrono = { version = "0.4.42", features = ["serde"] }
+portable-pty = "0.9.0"
+which = "8.0.0"
 
 # Dev 构建优化 - 加快编译速度
 [profile.dev]
