feat: 为 Subagent 面板添加图拓扑视图
- 集成 @xyflow/react 和 @dagrejs/dagre 实现节点图可视化
- Task 工具自动注册 subagent 信息，构建调用关系
- 面板新增可折叠图视图，支持高度拖拽调整
- 点击节点可查看对应 subagent 会话内容
- 图面板折叠状态和高度支持持久化

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.8",
     "@monaco-editor/react": "^4.7.0",
     "@opencode-ai/sdk": "^1.1.14",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -32,6 +33,7 @@
     "@tanstack/react-router": "^1.145.7",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@xyflow/react": "^12.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
