--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build && tsc --noEmit",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "dev:link-plugin": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1",
+    "dev:link-plugin:force": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1 -Force",
+    "dev:unlink-plugin": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1 -Remove"
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.8",
