refactor(plugin): 重构 axon-opencode-plugin 为标准 TypeScript 项目结构
- 添加 TypeScript, ESLint, Prettier 构建工具链
- 将 axon-bridge.ts 移动到 src/ 目录并模块化
- 构建输出到 dist/ 目录
- 后端改为加载编译后的 dist/index.js
- 添加 watch:plugin 开发监视脚本

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tauri": "tauri",
     "dev:link-plugin": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1",
     "dev:link-plugin:force": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1 -Force",
-    "dev:unlink-plugin": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1 -Remove"
+    "dev:unlink-plugin": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1 -Remove",
+    "watch:plugin": "bun scripts/watch-plugin.ts"
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.8",
