--- a/plugins/opencode/package.json
+++ b/plugins/opencode/package.json
@@ -1,9 +1,40 @@
 {
   "name": "axon-opencode-plugin",
-  "private": true,
+  "version": "0.1.0",
+  "description": "Axon Bridge Plugin for OpenCode - 实现 Axon Desktop 与 OpenCode 之间的桥接功能",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "scripts": {
+    "build": "bun build ./src/index.ts --outdir dist --target bun",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "format": "prettier --write src/",
+    "typecheck": "tsc --noEmit"
+  },
   "dependencies": {
     "@opencode-ai/plugin": "1.1.23",
     "zod": "4.1.8"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^20.11.5",
+    "@typescript-eslint/eslint-plugin": "8.47.0",
+    "@typescript-eslint/parser": "8.47.0",
+    "bun-types": "latest",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.4",
+    "typescript": "^5.8.0",
+    "typescript-eslint": "^8.47.0"
   }
 }
