feat(orchestration): 重构为编排组系统，支持主 Agent + 子 Agent 组合
- 新增编排组（Orchestration Groups）概念，每组包含主 Agent 和可选子 Agent
- Plugin API 改为动态端口分配，解决端口冲突问题
- 后端自动从编排组文件加载主 Agent 配置到 OpenCode
- 修复插件同时传递 temperature 和 top_p 导致部分模型报错的问题
- 添加编排组 CRUD 命令和前端组件
- 添加架构设计文档

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dagrejs/dagre": "^1.1.8",
     "@monaco-editor/react": "^4.7.0",
     "@opencode-ai/sdk": "^1.1.14",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
