feat: 用户无需手动安装插件，应用启动时自动从打包资源安装
- 生产构建中自动将 Axon Bridge 插件打包进应用资源
- 应用启动时检测并自动安装/更新插件到 OpenCode 配置目录
- 添加 GitHub Actions 工作流支持 tag 触发的多平台自动发布

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc --noEmit",
+    "build:plugin": "cd plugins/opencode && bun install && bun run build",
+    "build:all": "bun run build:plugin && bun run build",
     "preview": "vite preview",
     "tauri": "tauri",
     "dev:link-plugin": "pwsh -ExecutionPolicy Bypass -File scripts/dev-link-plugin.ps1",
