feat: 用户无需手动访问 GitHub 即可检查和安装应用更新
允许用户直接在应用中检查新版本并一键安装，无需离开应用访问 GitHub。通过 Tauri updater plugin 实现自动检查 GitHub releases，并自动处理下载和安装流程。

- 添加应用更新检查命令（check_app_update）
- 添加应用更新安装命令（install_app_update）
- 创建前端 Hook（useAppUpdater）封装更新流程
- 配置 GitHub Actions 自动发布 releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_OPTIONS: --max-old-space-size=4096
         with:
           tagName: ${{ github.ref_name }}
           releaseName: 'Axon ${{ github.ref_name }}'
