--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ chrono = { version = "0.4.42", features = ["serde"] }
 axum = { version = "0.8.8", features = ["tokio"] }
 sha2 = "0.10.9"
 dirs = "6.0.0"
+tauri-plugin-updater = "2.9.0"
 
 # Dev 构建优化 - 加快编译速度
 [profile.dev]
