--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
+    "monaco-editor": "^0.55.1",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^4.4.168",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
@@ -59,6 +62,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
